Fixed layout issue

--- a/web/sites/all/themes/evolve/lessc/PD/PDshopping.less
+++ b/web/sites/all/themes/evolve/lessc/PD/PDshopping.less
@@ -597,7 +597,7 @@ fieldset {
 }
 
 /*------------- FAIL PURCHASE -----------------*/
-#node-255{
+.pd-complete-custom-block{
   .fail-purchase{
     .flex-cell{
       justify-content: center;
